# atelier

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  probe-design.yml  probe.yml  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: release.yml  (+2 more)
PRD/: [260425] Atelier Design Tab — Spec v1.md  [260425] Atelier Design Tab — Spec v2.md  [260427] DesignProject Type Unification — Architecture Design.md
SOT/: L1-project-summary.md  autonomous-workspace-contract.md  evidence-log.md  service-factory-state.json  tasks.md
docs/: atelier-agent-harness.md  code-signing-policy.md  microsoft-store-release.md  privacy-policy.md  stella-factory.md  windows-code-signing.md
src/: index.css  main.tsx
src-tauri/: Atelier.entitlements  Cargo.toml  tauri.conf.json  tauri.microsoftstore.conf.json  tauri.windows-signing.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/design-engine/brand/: bykayle.md
src-tauri/resources/design-engine/component-library/: 00-tailwind-base.md
src-tauri/resources/design-engine/component-library/shadcn/: 01-button.md  02-card.md  03-input-form.md  04-badge-label.md  05-navigation.md
src-tauri/resources/design-engine/components/: case-study.html  ecg-widget.html  hero-variant-a.html  hero-variant-b.html  product-card.html  testimonial.html
src-tauri/resources/design-engine/decision-axes/: app.md  ci.md  print.md  web.md
src-tauri/resources/design-engine/philosophies/: 01-pentagram.md  02-field-io.md  03-kenya-hara.md  04-linear.md
src-tauri/resources/design-engine/prompts/: 01-brief-questions.md  01-brief.md  02-system.md  03-wireframe.md  04-hifi-refine.md  04-hifi.md  05-motion.md  06-review.md
src-tauri/resources/design-engine/prompts/app/: 03-flow.md  04-screens.md  06-review.md
src-tauri/resources/design-engine/prompts/ci/: 03-system.md  04-assets.md  06-review.md
src-tauri/resources/design-engine/prompts/print/: 03-layout.md  04-final.md  06-review.md
src-tauri/resources/design-engine/workflows/: atelier-design-flow.md
src-tauri/scripts/: windows-sign.ps1
src-tauri/src/: agent.rs  clipboard.rs  credentials.rs  lib.rs  pty.rs  stella.rs
tools/: atelier-agent-harness.mjs  windows-provider-smoke.ps1
(+168 files in other folders)
