[package]
name = "atelier"
version = "0.1.7"
description = "Atelier — 이미지 붙여넣기가 되는 GUI 터미널"
authors = ["BYKAYLE <indra850@gmail.com>"]
edition = "2021"
rust-version = "1.77"
license = "MIT"
repository = "https://github.com/BYKAYLE/atelier"
homepage = "https://github.com/BYKAYLE/atelier"
readme = "../README.md"

[lib]
name = "atelier_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools", "protocol-asset"] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.9"
tokio = { version = "1", features = ["full"] }
bytes = "1"
anyhow = "1"
image = { version = "0.25", default-features = false, features = ["png"] }
chrono = "0.4"
log = "0.4"
env_logger = "0.11"
once_cell = "1"
dashmap = "6"
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
